force-app/main/default/objects/Volunteer_Organization__c/Volunteer_Organization__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpOrganization</customHelpPage>
    <description>Manages information about Organizations that sponsor Volunteer Activities.</description>
    <label>Non Profit Organization</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Profit Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>