force-app/main/default/objects/Volunteer_Organization__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>