force-app/main/default/objects/Volunteer_Organization__c/fields/First_National_Account_Relation__c.field-meta.xml
<CustomField>
    <fullName>First_National_Account_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First National Account Relation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Volunteer_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>