force-app/main/default/objects/Volunteer_Organization__c/fields/Non_Profit_Status__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Status__c</fullName>
    <label>Non-Profit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>501C(3)</fullName>
            </value>
            <value>
                <fullName>501C(6)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>