force-app/main/default/objects/Volunteer_Organization__c/fields/Non_Profit_Status_Other__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Status_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-Profit Status Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>