force-app/main/default/objects/Volunteer_Organization__c/fields/Organization_Cause__c.field-meta.xml
<CustomField>
    <fullName>Organization_Cause__c</fullName>
    <label>Organization Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access to Culture</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Community Cohesion</fullName>
            </value>
            <value>
                <fullName>Educated Workforce</fullName>
            </value>
            <value>
                <fullName>Good Health</fullName>
            </value>
            <value>
                <fullName>Stable Housing</fullName>
            </value>
            <value>
                <fullName>Strong Local Economies</fullName>
            </value>
            <value>
                <fullName>Sustained Environment</fullName>
            </value>
            <value>
                <fullName>Vibrant Neighborhoods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>