force-app/main/default/objects/Volunteer_Organization__c/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipName>ChildOrganization</relationshipName>
    <type>Lookup</type>
</CustomField>