force-app/main/default/objects/Volunteer_Organization__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Encrypted Tax ID for the Non Profit Organization</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Tax ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>