force-app/main/default/objects/Volunteer_Organization__c/fields/X501_c_3__c.field-meta.xml
<CustomField>
    <fullName>X501_c_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>501(c)(3) or 501(c)(6)</label>
    <type>Checkbox</type>
</CustomField>