force-app/main/default/objects/Volunteer_Organization__c/validationRules/Country_Conditionally_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Conditionally_Required</fullName>
    <active>true</active>
    <description>The country is required if the zip code is populated, so that we can verify the zip code format.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Country__c,&quot;&quot;),
Zip_Postal_Code__c &lt;&gt; &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Country is required when Zip Code is populated.</errorMessage>
</ValidationRule>